fixtures/errors/circular_b.hu
@use * from "circular_a.hu"

tagaxis dummy_b {
  role: classificatory
  display: { en: "Dummy B" }
}
